...
                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ya7-2B-hDc">
                                                    <rect key="frame" x="10" y="252" width="355" height="40"/>
                                                    <subviews>
                                                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wGB-05-HRG">
                                                            <rect key="frame" x="0.0" y="0.0" width="167.5" height="40"/>
                                                            <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="15"/>
                                                            <state key="normal" title="Show followers">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </state>
                                                            <connections>
                                                                <action selector="followButtonClicked:" destination="GMg-8j-rEz" eventType="touchUpInside" id="bJw-wN-yeb"/>
                                                            </connections>
                                                        </button>
                                                        <button opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4od-ms-Q1B">
                                                            <rect key="frame" x="187.5" y="0.0" width="167.5" height="40"/>
                                                            <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="15"/>
                                                            <state key="normal" title="Show following">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </state>
                                                            <connections>
                                                                <action selector="followButtonClicked:" destination="GMg-8j-rEz" eventType="touchUpInside" id="a94-xZ-Ezx"/>
                                                            </connections>
                                                        </button>
...
                        <viewControllerLayoutGuide type="bottom" id="kLV-bg-Q91"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Y6v-fc-26k">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search user" translatesAutoresizingMaskIntoConstraints="NO" id="wpk-ZH-zkB">
                                <rect key="frame" x="0.0" y="52" width="375" height="56"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="iGd-hC-igX"/>
                                </constraints>
                                <textInputTraits key="textInputTraits"/>
...
                            <constraint firstItem="wpk-ZH-zkB" firstAttribute="leading" secondItem="Y6v-fc-26k" secondAttribute="leading" id="iBg-eX-WRc"/>
                            <constraint firstAttribute="trailing" secondItem="crW-Hg-lGa" secondAttribute="trailing" id="ier-Nz-F5a"/>
                            <constraint firstItem="crW-Hg-lGa" firstAttribute="top" secondItem="wpk-ZH-zkB" secondAttribute="bottom" id="nPu-b5-xdx"/>
                            <constraint firstAttribute="trailing" secondItem="wpk-ZH-zkB" secondAttribute="trailing" id="xjp-nd-v6c"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="GitHub Users" id="c8c-OD-LRG">
                        <barButtonItem key="rightBarButtonItem" title="Recent Searches" id="Jum-5u-tUw">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="showHistoryButtonClicked:" destination="pEY-b8-Ujv" id="Oqr-nX-UPU"/>
                            </connections>
                        </barButtonItem>
...
