...
    var activeUser: User?

    var usersArray: [User] = []
    
    override func viewDidLoad() {
        super.viewDidLoad()
        navigationItem.title = isFollowersShown == true ? "Followers" : "Following"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        fectchUserFollowersDetailsFromGitHub()
    }
    
...
