...
    var filteredUsers: [User] = []
    var showHistoryData = false
    
    override func viewDidLoad() {
        super.viewDidLoad()
        getCachedUsersFromDB()
        showHistoryButton.title = "Show History"
    }
    
    @IBAction func showHistoryButtonClicked(_ sender: UIBarButtonItem) {
        searchBar.text = nil
        activeUser = nil
        
...
